# PyComposit

./: .gitignore  README.md  pyproject.toml  qgrid.py
examples/: gpuds.py  qat_cuda.py
pycomposit/: __init__.py  layers.py  matmul.py  models.py  qt.py
