[project]
name = "pycomposit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icecream>=2.1.8",
    "matplotlib>=3.10.6",
    "nvidia-cudnn-frontend>=1.14.1",
    "prettytable>=3.16.0",
    "snoop>=0.6.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
